--- a/ComicTrip.html
+++ b/ComicTrip.html
@@ -49,20 +49,20 @@
   <nav width="100%" height="50px" class='nav'>
     <b>
       <ul>
-        <li class="point-menu">Главная<img src="image/triangle.png" width="20px" height="20px" />
-          <ul class="point-menu__podmenu">
+        <li class="menu">Главная<img src="image/triangle.png" />
+          <ul class="menu__item">
             <li>Новости</li>
             <li>Интересное</li>
           </ul>
         </li>
-        <li class="point-menu">Магазин<img src="image/triangle.png" width="20px" height="20px" />
-          <ul class="point-menu__podmenu">
+        <li class="menu">Магазин<img src="image/triangle.png"  />
+          <ul class="menu__item">
             <li>Каталог</li>
             <li>Акции</li>
           </ul>
         </li>
-        <li class="point-menu">О нас<img src="image/triangle.png" width="20px" height="20px" />
-          <ul class="point-menu__podmenu">
+        <li class="menu">О нас<img src="image/triangle.png" />
+          <ul class="menu__item">
             <li>Контакты</li>
             <li>Справка о сайте</li>
           </ul>
@@ -88,10 +88,10 @@
         </marquee>
       </div>
 
-      <div class="buttons">
-        <button class="buttons__button-left">
+      <div class="news-controls">
+        <button class="news-controls__button-left">
           <<</button>
-            <button class="buttons__button-right">>></button>
+            <button class="news-controls__button-right">>></button>
       </div>
 
       <div class="news-block"><img class='news-block__image' src="image/avengers.jpg" height="100%" />
