Добавлена перемотка товара

--- a/ComicTrip.html
+++ b/ComicTrip.html
@@ -133,7 +133,10 @@
   </section>
 
   <section class="sale">
-
+   <div class="radio-container"> <div class='radio' onclick="MoveBlock(0)"></div> <div class='radio' onclick="MoveBlock(1)"></div> <div class='radio' onclick="MoveBlock(2)"></div></div>
+  <div class="wrapper-sale">
+  
+  <div class="block-sale">
     <div class="product">
       <img id="id1" width="100%" height="80%" />
       <button class="product__pay" onclick="sumWrite(name1)" align="center"><img src="image/cart.svg" width="24px"
@@ -161,6 +164,74 @@
       </div>
     </div>
     <script>const name3 = rand(id3, d3);</script>
+</div>
+  
+  
+  
+  
+  
+  
+  
+  
+  <div class="block-sale">
+    <div class="product">
+      <img  width="100%" height="80%" />
+      <button class="product__pay" align="center"><img src="image/cart.svg" width="24px"
+          height="24px" /></button>
+      <div align="center" id="d3">
+
+      </div>
+    </div>
+	 <div class="product">
+      <img  width="100%" height="80%" />
+      <button class="product__pay"  align="center"><img src="image/cart.svg" width="24px"
+          height="24px" /></button>
+      <div align="center" id="d3">
+
+      </div>
+    </div>
+	 <div class="product">
+      <img  width="100%" height="80%" />
+      <button class="product__pay"  align="center"><img src="image/cart.svg" width="24px"
+          height="24px" /></button>
+      <div align="center" id="d3">
+
+      </div>
+    </div>
+	</div>
+	
+	
+
+
+
+
+<div class="block-sale">
+    <div class="product">
+      <img  width="100%" height="80%" />
+      <button class="product__pay"  align="center"><img src="image/cart.svg" width="24px"
+          height="24px" /></button>
+      <div align="center" id="d3">
+
+      </div>
+    </div>
+	 <div class="product">
+      <img  width="100%" height="80%" />
+      <button class="product__pay"  align="center"><img src="image/cart.svg" width="24px"
+          height="24px" /></button>
+      <div align="center" id="d3">
+
+      </div>
+    </div>
+	 <div class="product">
+      <img  width="100%" height="80%" />
+      <button class="product__pay"  align="center"><img src="image/cart.svg" width="24px"
+          height="24px" /></button>
+      <div align="center" id="d3">
+
+      </div>
+    </div>
+	</div>
+	</div>
     <div class="product-foot">
       <h2 class='product-foot__logo-foot'>
         <font color="white">Акционные предложения</font>
