--- a/ComicTrip.html
+++ b/ComicTrip.html
@@ -32,7 +32,7 @@
 	  <button id='-1'>-</button>
 	<button  disabled ></button>
 	  <button id='1'>+</button>
-	  <button  id = 'trash'><img src='image/trash.png'</button>
+	  <button  id = '2'><img src='image/trash.png'</button>
 	  </p>
 	  </div>
 	  </div>
