--- a/ComicTrip.html
+++ b/ComicTrip.html
@@ -24,18 +24,22 @@
 	
 
 	  
-	  <template id='tovar'>
+	  <template id='temp-product'>
 	<div class='create_div' onclick='event.stopPropagation(); if(event.target.nodeName=="BUTTON")popup.addEvent(String(event.target.parentElement.classList),event.target.id); '>
 	  <img  id='image' height='100%' width='15%'/>
 	  <div class='cart_product'>
 	  <p> </p><p></p><p><b>Количество товара</b>: 
-	  <button id='-1'>-</button>
-	<button  disabled ></button>
-	  <button id='1'>+</button>
-	  <button  id ='2'><img src='image/trash.png' style='pointer-events:none;'></button>
+	
 	  </p>
 	  </div>
 	  </div>
+	  </template>
+	  
+	  <template id='temp-counter'>
+	   <button id='-1'>-</button>
+	<button  disabled ></button>
+	  <button id='1'>+</button>
+	  <button  id ='2'><img src='image/trash.png' style='pointer-events:none;'></button>
 	  </template>
 
   <div class="layer"></div>
@@ -162,31 +166,31 @@
   <div class="block-sale">
     <div class="product">
       <img id="id1" width="100%" height="80%" />
-      <button class="product__pay" onclick="popup.sumWrite(name1);" align="center"><img src="image/cart.svg" width="24px"
+      <button class="product__pay" onclick="popup.changeCard(name1);" align="center"><img src="image/cart.svg" width="24px"
           height="24px" /></button>
       <div align="center" id="d1">
 
       </div>
     </div>
-    <script>const name1 = rand(id1, d1);</script>
+    <script>const name1 = randomCard(id1, d1);</script>
     <div class="product">
       <img id="id2" width="100%" height="80%" />
-      <button class="product__pay" onclick="popup.sumWrite(name2);" align="center"><img src="image/cart.svg" width="24px"
+      <button class="product__pay" onclick="popup.changeCard(name2);" align="center"><img src="image/cart.svg" width="24px"
           height="24px" /></button>
       <div align="center" id="d2">
 
       </div>
     </div>
-    <script>const name2= rand(id2, d2);</script>
+    <script>const name2= randomCard(id2, d2);</script>
     <div class="product">
       <img id="id3" width="100%" height="80%" />
-      <button class="product__pay" onclick="popup.sumWrite(name3);" align="center"><img src="image/cart.svg" width="24px"
+      <button class="product__pay" onclick="popup.changeCard(name3);" align="center"><img src="image/cart.svg" width="24px"
           height="24px" /></button>
       <div align="center" id="d3">
 
       </div>
     </div>
-    <script>const name3 = rand(id3, d3);</script>
+    <script>const name3 = randomCard(id3, d3);</script>
 </div>
   
   
